# greenfield

./: README.md  pyproject.toml
examples/: example.gf
examples/templates/: nginx.conf.j2
src/greenfield/: __init__.py  __main__.py  bundle.py  compiler.py  errors.py  grammar.lark  loader.py  state.py  transformer.py
src/greenfield/resources/: __init__.py  file.py
